# rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
common/: pagination.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  development.py
documents/: apps.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_documentchunk.py
documents/services/: chunking_service.py  document_processor.py  embedding.py  indexing.py  storage.py
rag/: apps.py  models.py  serializers.py  urls.py  views.py
rag-frontend/: package-lock.json  package.json  vite.config.ts
rag-frontend/src/: App.tsx  index.css
rag-frontend/src/api/: client.ts  documents.ts  rag.ts
rag-frontend/src/components/: AuthLayout.tsx  PasswordInput.tsx  ProtectedRoute.tsx
rag-frontend/src/context/: AuthContext.tsx
rag-frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Login.tsx  Signup.tsx
rag-frontend/src/styles/: auth.ts  dashboard.ts  tokens.ts  ui.ts
rag-frontend/src/types/: auth.ts
rag/migrations/: 0001_initial.py  0002_chat_queryhistory_chat.py
rag/services/: access_control.py  llm_service.py  rag_query_service.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: get_client_ip.py
